syntax = "proto3";

package users;

import "google/protobuf/timestamp.proto";

// Users Service
service UsersService {
  rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

// User Message
message User {
  string id = 1;
  string email = 2;
  string name = 3;
  google.protobuf.Timestamp createdAt = 4;
  google.protobuf.Timestamp updatedAt = 5;
}

// Get All Users
message GetAllUsersRequest {
}

message GetAllUsersResponse {
  bool success = 1;
  string message = 2;
  repeated User data = 3;
}

// Get User
message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  bool success = 1;
  string message = 2;
  User data = 3;
}

// Create User
message CreateUserRequest {
  string email = 1;
  string name = 2;
  string password = 3;
}

message CreateUserResponse {
  bool success = 1;
  string message = 2;
  User data = 3;
}

// Update User
message UpdateUserRequest {
  string id = 1;
  string email = 2;
  string name = 3;
}

message UpdateUserResponse {
  bool success = 1;
  string message = 2;
  User data = 3;
}

// Delete User
message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}
